welcome page complete, layout, new image and components

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@
     --font-sans: 'Inter', sans-serif;
     --font-island: 'Island Moments', cursive;
     --font-jost: 'Jost';
+    --font-poppins: 'Poppins', sans-serif;
 }
